# stake-for-fee-sdk

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  package.json
common/: Cargo.toml
programs/stake-for-fee/: Cargo.toml
programs/stake-for-fee/src/: constant.rs  errors.rs  events.rs  lib.rs  pda.rs
programs/stake-for-fee/src/instructions/: cancel_unstake.rs  claim_fee.rs  claim_fee_crank.rs  close_config.rs  dummy.rs  initialize_config.rs  initialize_stake_escrow.rs  initialize_vault.rs  mod.rs  stake.rs  unstake.rs  withdraw.rs
programs/stake-for-fee/src/states/: config.rs  full_balance_list.rs  mod.rs  stake_escrow.rs  top_list_metadata.rs  unstake.rs  vault.rs
stake_for_fee_interface/: Cargo.toml
stake_for_fee_interface/src/: accounts.rs  errors.rs  events.rs  instructions.rs  lib.rs  typedefs.rs
ts-client/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
ts-client/src/: index.ts  test.ts
ts-client/src/examples/: actions.ts  create_pool_and_fee_vault.ts  index.ts  utils.ts
ts-client/src/stake-for-fee/: index.ts
ts-client/src/stake-for-fee/constants/: compute.ts  index.ts
ts-client/src/stake-for-fee/helpers/: compute.ts  decoder.ts  dynamic_amm.ts  index.ts  pda.ts  program.ts  staker_for_fee.ts  tx.ts
ts-client/src/stake-for-fee/idls/: stake_for_fee.ts
ts-client/src/stake-for-fee/types/: index.ts
ts-client/src/tests/: find_smallest_staker_not_in_top_list_from_full_balance_list.test.ts  find_smallest_top_stakers.test.ts
ts-client/src/tests/utils/: top_staker_list.ts
